[build-system]
requires = [
    "hatchling >= 1.26",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "example_package_Leon_Kruse"
dynamic = ["version"]
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Otzel/example-package_Leon_Kruse"
Issues = "https://github.com/Otzel/example-package_Leon_Kruse/issues"

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.version]
source = "vcs"
